remove snipcart, analytics & maps

--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,12 @@ map:
 	</form>
 
 	<div class="contact-details">
+		{% if site.google_maps_javascript_api_key %}
 		<div class="map" id="map"></div>
+		{% endif %}
 </div>
 
+{% if site.google_maps_javascript_api_key %}
 <script type="text/javascript">
 	window.mapData = {{ page.map | jsonify }};
 
@@ -60,3 +63,4 @@ map:
 	}
 </script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_javascript_api_key }}&amp;callback=initMap"></script>
+{% endif %}
